--- a/docs-2.0/stylesheets/extra.css
+++ b/docs-2.0/stylesheets/extra.css
@@ -4,13 +4,13 @@
 
 /* nebula dark */
 :root{
-  --md-primary-fg-color:#a27e7e; /* Tar bar color*/
+  --md-primary-fg-color:#A6A5C4; /* Tar bar color*/
   --md-accent-fg-color: #FA8072; /* Selected color */
 }
 
 /* nebula light */
 [data-md-color-scheme="nebula"]{
-  --md-primary-fg-color: #FF0000; /* Tar bar color */
+  --md-primary-fg-color: #55295B; /* Tar bar color */
   --md-accent-fg-color: #49BDF0; /* Selected color */
 
   --md-code-fg-color:  rgb(12, 21, 26);
