--- a/docs-2.0/stylesheets/extra.css
+++ b/docs-2.0/stylesheets/extra.css
@@ -10,7 +10,7 @@
 
 /* nebula light */
 [data-md-color-scheme="nebula"]{
-  --md-primary-fg-color: #66CCFF; /* Tar bar color */
+  --md-primary-fg-color: #FFCC83; /* Tar bar color */
   --md-accent-fg-color: #7DBB7C; /* Selected color */
 
   --md-code-fg-color:  rgb(12, 21, 26);
