--- a/docs-2.0/stylesheets/extra.css
+++ b/docs-2.0/stylesheets/extra.css
@@ -10,10 +10,10 @@
 
 /* nebula light */
 [data-md-color-scheme="nebula"]{
-  --md-primary-fg-color: #8CCAB0; /* Tar bar color */
+  --md-primary-fg-color: #006B35; /* Tar bar color */
   --md-accent-fg-color: #5b1cdb; /* Selected color */
 
   --md-code-fg-color:  rgb(12, 21, 26);
   --md-code-bg-color:  #eaebec;
-  --md-typeset-color:   #000000;
+  --md-typeset-color:   #1298b7;
 }
