--- a/docs-2.0/stylesheets/extra.css
+++ b/docs-2.0/stylesheets/extra.css
@@ -15,5 +15,5 @@
 
   --md-code-fg-color:  rgb(12, 21, 26);
   --md-code-bg-color:  #eaebec;
-  --md-typeset-color:   #1298b7;
+  --md-typeset-color:   #000000;
 }
