fix link and search

--- a/docs-2.0-en/overrides/partials/header.html
+++ b/docs-2.0-en/overrides/partials/header.html
@@ -60,7 +60,11 @@
     <label class="md-header__button md-icon" for="__search">
       {% include ".icons/material/magnify.svg" %}
     </label>
-    {% include "partials/search.html" %}
+    {% if "search" in config["plugins"] %}
+      {% include "partials/search.html" %}
+    {% else %}
+      {% include "partials/algolia-search.html" %}
+    {% endif %}
     {% if config.repo_url %}
       <div class="md-header__source">
         {% include "partials/source.html" %}
