change announce bar height for EN

--- a/docs-2.0-en/stylesheets/extra.css
+++ b/docs-2.0-en/stylesheets/extra.css
@@ -13,6 +13,12 @@ color: rgba(0, 0, 0, 0.714);
 background-color: rgba(169, 241, 62, 0.541);
 }
 
+/* 自定义 annnoucement bar 和 outdate bar的height */    
+div.md-banner__inner {
+  margin: 0.2rem auto;
+}     
+
+
 /* nebula dark */
 :root{
   --md-primary-fg-color:#A6A5C4; /* Tar bar color*/
