--- a/docs-2.0-en/stylesheets/extra.css
+++ b/docs-2.0-en/stylesheets/extra.css
@@ -15,14 +15,14 @@ background-color: rgba(169, 241, 62, 0.541);
 
 /* nebula dark */
 :root{
-  --md-primary-fg-color:#A6A5C4; /* Tar bar color*/
-  --md-accent-fg-color: #FA8072; /* Selected color */
+  --md-primary-fg-color:#316745; /* Tar bar color*/
+  --md-accent-fg-color: #49BDF0; /* Selected color */
 }
 
 /* nebula light */
 [data-md-color-scheme="nebula"]{
-  --md-primary-fg-color: #55295B; /* Tar bar color */
-  --md-accent-fg-color: #49BDF0; /* Selected color */
+  --md-primary-fg-color: #316745; /* Tar bar color */
+  --md-accent-fg-color: #7DBB7C; /* Selected color */
 
   --md-code-fg-color:  rgb(12, 21, 26);
   --md-code-bg-color:  #eaebec;
